fix line items update and destroy actions
