# app/controllers/api/v1/line_items_controller.rb
@@ -1,6 +1,6 @@
 class Api::V1::LineItemsController < ApplicationController
   before_action :initialize_cart
-  before_action :find_product
+  before_action :find_product, only: %i[create]
   before_action :find_item, only: %i[update destroy]
 
   def create
@@ -11,12 +11,14 @@ class Api::V1::LineItemsController < ApplicationController
 
   def update
     process_items_update(response_action: :show) do |record|
-      record.update(quantity: params.require(:line_items).permit(:quantity))
+      record.update(quantity: params[:quantity])
     end
   end
 
   def destroy
     @item.destroy
+
+    render status: :ok, json: { success: true }
   end
 
   private
@@ -29,7 +31,11 @@ class Api::V1::LineItemsController < ApplicationController
     @product = Product.find(params[:product_id])
   end
 
+  def find_item_query
+    action_name == :create ? { product: @product } : { id: params[:id]}
+  end
+
   def find_item
-    @item = @cart.line_items.find_by!(product: @product)
+    @item = @cart.line_items.find_by!(find_item_query)
   end
 end
